--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -68,6 +68,13 @@
   display: none;
 }
 
+.header__shrink {
+  position: sticky;
+  top: 0;
+  left: 0;
+  box-shadow: 5px 5px 15px -5px #fde4e4;
+}
+
 @media only screen and (max-width: 992px) {
   .logo img {
     width: calc(100% - 70%);
@@ -116,5 +123,17 @@
 
   .show__menu {
     display: block;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+  }
+
+  .logo h5 {
+    margin-top: 0px;
   }
 }
