--- a/src/styles/hero-section.css
+++ b/src/styles/hero-section.css
@@ -40,3 +40,30 @@
 .hero__img {
   margin: 40px;
 }
+
+@media only screen and (max-width: 768px) {
+  .hero__content h5 {
+    font-size: 1rem;
+  }
+
+  .hero__content p {
+    font-size: 0.8rem;
+    line-height: 25px;
+  }
+
+  .hero__title {
+    font-size: 1.5rem;
+    line-height: 40px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .hero__content {
+    text-align: center;
+  }
+
+  .order__btn {
+    display: block;
+    margin: 0 auto;
+  }
+}
